--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Attendance management backend server",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "nodemon index.js",
+    "start": "node index.js",
+    "build": "rimraf dist && mkdir dist && copyfiles -u 1 src/**/*.js dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -20,7 +21,11 @@
     "moment-timezone": "^0.6.0",
     "mongoose": "^8.19.1",
     "node-cron": "^4.2.1",
-    "node-schedule": "^2.1.1",
-    "nodemon": "^3.1.10"
+    "node-schedule": "^2.1.1"
+  },
+  "devDependencies": {
+    "copyfiles": "^2.4.1",
+    "nodemon": "^3.1.10",
+    "rimraf": "^6.0.1"
   }
 }
